  as well ("yes"), or hide the document ("no"), or ask the user
  ("ask").

The following pref variables are obsoleted in 2.1:

- \\default_language
- \\default_papersize

To set the default language and paper size for new documents, use the
"Save As Document Defaults" button in Document > Settings.

The following new LyX functions have been introduced:

- LFUN_BUFFER_EXPORT_AS <format> <filename>
  Equivalent to the new -export-to command-line switch (see above).

- LFUN_CLIPBOARD_PASTE_SIMPLE ("clipboard-paste-simple")
  Paste the clipboard contents as simple unformatted text.
  This is also available through a new menu voice within the
  [Edit]->[Paste Special...] sub-menu.

- LFUN_VIEW_CLOSE
  Close the current document view only, if there are no more views
  on the document, either close or hide it (see the new preference
  option \\close_buffer_with_last_view)

The following LyX functions have been removed:

//template, remove this entry later on
- LFUN_NEXT_INSET_TOGGLE ("next-inset-toggle"): use "inset-toggle" instead.


The following LyX functions have been changed:

//template, remove this entry later on
- LFUN_INSET_TOGGLE ("inset-toggle"): For some insets, this function was used 
  to show the settings dialog. This is no longer possible and one should use
  inset-settings for this purpose.
 
-  LFUN_CLOSE_TAB_GROUP_CLOSE ("close-tab-group") was renamed to
   LFUN_TAB_GROUP_CLOSE ("tab-group-close").

-  LFUN_SPIT_VIEW ("split-view") was renamed to
   LFUN_VIEW_SPLIT ("view-split").

- LFUN_BREAK_PARAGRAPH ("break-paragraph") was renamed to
  LFUN_PARAGRAPH_BREAK ("paragraph-break").

The following LyX key bindings have been changed:

//template, remove this entry later on
- LFUN_MATH_MACRO_FOLD ("math-macro-fold")
  The binding to "C-minus" has changed to "C-S-underscore".

- The binding "C-w" was moved from "buffer-close" to "view-close"
  (only in cua.bind).


Linux desktop file specification and scalable icon has been included
into the tarball.

