@@ -441,6 +441,8 @@ Menuset
 	Menu "context-branch"
 		OptItem "Activate Branch|A" "branch-activate"
 		OptItem "Deactivate Branch|e" "branch-deactivate"
+		OptItem "Activate Branch in Master|M" "branch-master-activate"
+		OptItem "Deactivate Branch in Master|v" "branch-master-deactivate"
 	End
 
 #
